# playground

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/: CODEOWNERS  renovate.json
.github/workflows/: ci.yaml  python-semantic-release.yaml  update-docs.yaml
docs/: Makefile
docs/source/: conf.py  index.rst
scripts/: ensure_conventional_commit_style.sh
src/playground/: __init__.py
