[project]
name = "playground"
version = "0.0.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "IrrAnd", email = "184002004+IrrAnd@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
